<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_jobs"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_jobs" />
    <item
        android:id="@+id/nav_candidates"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_candidates" />
    <item
        android:id="@+id/nav_matching_center"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_matching" />
    <item
        android:id="@+id/nav_benchmark"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="基准测试" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>